--- a/.gitpod/Dockerfile
+++ b/.gitpod/Dockerfile
@@ -12,6 +12,13 @@ RUN curl -sL https://deb.nodesource.com/setup_14.x | sudo bash -
 RUN sudo apt-get install -y nodejs
 RUN sudo npm install -g yarn
 
+# Install nvm
+RUN bash -c 'VERSION="lts/gallium" \
+    && source $HOME/.nvm/nvm.sh && nvm install $VERSION \
+    && nvm use $VERSION && nvm alias default $VERSION'
+
+RUN echo "nvm use default &>/dev/null" >> ~/.bashrc.d/51-nvm-fix
+
 # Install mkcert and nss
 RUN sudo apt-get update && sudo apt-get install -y libnss3-tools
 RUN curl -JLO "https://dl.filippo.io/mkcert/latest?for=linux/amd64" && \
